[tool.poetry]
name = "frame-interpolation"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
tensorflow = ">=2.6.2"
tensorflow-datasets = ">=4.4.0"
absl-py = ">=0.12.0"
gin-config = ">=0.5.0"
parameterized = ">=0.8.1"
mediapy = ">=1.0.3"
scikit-image = ">=0.19.1"
apache-beam = ">=2.34.0"
google-cloud-bigquery-storage = ">=1.1.0"
natsort = ">=8.1.0"
gdown = ">=4.5.4"
tqdm = ">=4.64.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
